# quant-data-lake

./: README.md  pyproject.toml
src/qdlake/: cli.py  paths.py  queries.py  schemas.py  validation.py
src/qdlake/providers/: base.py  stooq.py  yahoo.py
src/qdlake/storage/: parquet.py
src/quant_data_lake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_paths.py  test_queries.py  test_storage.py  test_validation.py
