[project]
name = "quant-data-lake"
version = "0.1.0"
description = "A local research data lake for quant research."
requires-python = ">=3.10"
dependencies = [
    "polars",
    "duckdb",
    "pyarrow",
    "pydantic",
    "pandas-datareader",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
qdlake = "qdlake.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]